--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.application.name=Bewerbungsaufgabe
-spring.datasource.url=jdbc:postgresql://localhost:5432/deine_datenbank
-spring.datasource.username=dein_benutzername
-spring.datasource.password=dein_passwort
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# PostgreSQL-Datenbankverbindung
+spring.datasource.url=jdbc:postgresql://localhost:5432/bewerbungsaufgabe
+spring.datasource.username=admin
+spring.datasource.password=admin
 
+# JPA-Einstellungen
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.default_schema=public
